--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
-
-Sving2 is based on the Primstar2 original code written by Domino Marama and Gaia Clary.
+Albsalgar is based on the Primstar2 original code written by Domino Marama and Gaia Clary.
 (http://blog.machinimatrix.org/primstar-2/)
 
 Additional changes, (Specifically rebranding) by Albsalgar Magic.
